--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -27,3 +27,4 @@ walkdir = "2.5.0"
 plotly = "0.9.0"
 catppuccin = "2.4.0"
 serde_json = "1.0.145"
+rust_decimal = { version = "1.40.0", features = ["macros", "serde-float"] }
