--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -28,3 +28,4 @@ plotly = "0.9.0"
 catppuccin = "2.4.0"
 serde_json = "1.0.145"
 rust_decimal = { version = "1.40.0", features = ["macros", "serde-float"] }
+num-format = "0.4.4"
