--- a/data/de07/de07.yaml
+++ b/data/de07/de07.yaml
@@ -87,11 +87,13 @@ constraints:
       Evi: Laura
       Meji: Elena
 
-  # - type: !Box {num: 3, comment: "E08"}
-  #   check: !Lights [0]
-  #   map:
+  - type: !Box {num: 3, comment: "E07"}
+    check: !Lights [0]
+    map:
+      # Ella: Ema
+      Julian: Linda
 
-  # - type: !Night {num: 3, comment: "E09"}
+  # - type: !Night {num: 3, comment: "E08"}
   #   check: !Lights [3]
   #   resultUnknown: true
   #   # noExclude: true
