--- a/data/de07/de07.yaml
+++ b/data/de07/de07.yaml
@@ -115,7 +115,7 @@ constraints:
   #   check: !Lights [0]
   #   map:
   #     JulianM: Marla
-  #     Chris: Adrianna
+  #     # Chris: Adrianna
 
   # - type: !Night {num: 4, comment: "E10"}
   #   check: !Lights [3]
