--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -29,3 +29,5 @@ catppuccin = "2.4.0"
 serde_json = "1.0.145"
 rust_decimal = { version = "1.40.0", features = ["macros", "serde-float"] }
 num-format = "0.4.4"
+rand = "0.10.0"
+rayon = "1.11.0"
