--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -31,3 +31,4 @@ rust_decimal = { version = "1.40.0", features = ["macros", "serde-float"] }
 num-format = "0.4.4"
 rand = "0.10.0"
 rayon = "1.11.0"
+chrono = "0.4.43"
