switch constraint num to decimal and unify statistics in a single json file

--- a/.github/workflows/run-simulation.yml
+++ b/.github/workflows/run-simulation.yml
@@ -168,10 +168,7 @@ jobs:
             ${{ env.STEM }}.col.out
             ${{ env.STEM }}.md
             ${{ env.STEM }}*.dot
-            ${{ env.STEMD }}/statInfo.csv
-            ${{ env.STEMD }}/statMB.csv
-            ${{ env.STEMD }}/statMN.csv
-            ${{ env.STEMD }}/statSum.json
+            ${{ env.STEMD }}/stats.json
             ./data/.gitkeep
 
   commit-results:
