--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -34,7 +34,7 @@ jobs:
         run: cargo fmt --all -- --check
 
       - name: Run clippy
-        run: cargo clippy --all-targets --all-features -- -D
+        run: cargo clippy --all-targets --all-features
 
       - name: Run tests
         run: cargo test --all --all-features --verbose
