--- a/data/de07/de07.yaml
+++ b/data/de07/de07.yaml
@@ -117,8 +117,8 @@ constraints:
       JulianM: Marla
       # Chris: Adrianna
 
-  - type: !Night {num: 4, comment: "E10"}
-    check: !Lights [1]
+  - type: !Night {num: 4, comment: "E10", offer: !Group {by: "Chris", amount: 55000}}
+    check: !Sold
     # resultUnknown: true
     # noExclude: true
     # buildTree: true
@@ -138,6 +138,7 @@ constraints:
   # - type: !Box {num: 5, comment: "E11"}
   #   check: !Lights [0]
   #   map:
+  #     x
 
   # - type: !Night {num: 5, comment: "E12"}
   #   check: !Lights [3]
